Allow to use cmake>=2.8.7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 2.8.12)
-set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+cmake_minimum_required(VERSION 2.8.7)
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/chemfiles/cmake")
 
 project(cfiles CXX)
 set(CMAKE_CXX_STANDARD 11)
@@ -10,6 +10,9 @@ if(EXISTS "${PROJECT_SOURCE_DIR}/chemfiles/CMakeLists.txt")
 else()
     message(FATAL_ERROR "Missing the chemfiles library. Please run `git submodule update --init`.")
 endif()
+
+include(CompilerFlags)
+
 include_directories(chemfiles/include/)
 
 include_directories(SYSTEM external/)
